[package]
name = "mdproof"
version = "0.1.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]
edition = "2018"
license = "MPL-2.0"

[workspace]
members = ["web"]

[features]
build-binary = ['quicli']

[[bin]]
name = "mdproof"
doc = false
required-features = ['build-binary']

[dependencies]
quicli = { version = "0.3", optional = true }
pulldown-cmark = "0.5.3"
printpdf = "0.2.11"
image = "0.20"
rusttype = "0.7"
failure = "0.1.5"
quick-xml = "0.15.0"
log = "0.4.8"

[patch.crates-io]
time = { git = "https://github.com/Geemili/time.git", branch = "feature-wasm-now" }
